--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="lib/gl-matrix-min.js"></script>
     <script type="text/javascript" src="lib/bone.gl.enchant.js"></script>
     <script type="text/javascript" src="lib/primitive.gl.enchant.js"></script>
-    <script type="text/javascript" src="lib/collada.gl.enchant.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     <style type="text/css">
         body {
             margin: 0;
