--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no"> 
     <meta name="apple-mobile-web-app-capable" content="yes">
+    <title>Space shooting</title>
     <script type="text/javascript" src="lib/enchant.min.js"></script>
+    <script type="text/javascript" src="lib/nineleap.enchant.js"></script>
     <script type="text/javascript" src="lib/gl.enchant.js"></script>
     <script type="text/javascript" src="lib/gl-matrix-min.js"></script>
     <script type="text/javascript" src="lib/bone.gl.enchant.js"></script>
     <script type="text/javascript" src="lib/primitive.gl.enchant.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
     <style type="text/css">
         body {
             margin: 0;
