--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Space shooting</title>
     <script type="text/javascript" src="lib/enchant.min.js"></script>
     <script type="text/javascript" src="lib/nineleap.enchant.js"></script>
+    <script type="text/javascript" src="lib/ui.enchant.js"></script>
     <script type="text/javascript" src="lib/gl.enchant.js"></script>
     <script type="text/javascript" src="lib/gl-matrix-min.js"></script>
     <script type="text/javascript" src="lib/primitive.gl.enchant.js"></script>
